# spider

./: .gitignore  README.md
Firmware/: CMakeLists.txt  protocol.h  spider.c
KiCad/: SPIder.kicad_pcb  SPIder.kicad_pro  SPIder.kicad_sch  SPIder.kicad_sym  fp-lib-table  sym-lib-table
KiCad/SPIder.pretty/: PinHeader_2x10_P2.54mm_Horizontal.kicad_mod  SPIder_Logo.kicad_mod  TestPoint_Pad_D1.152mm.kicad_mod
